# voiceMonitor

./: .gitignore  LISENCE  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: live.py
tests/: test_session.py
voiceMonitor/: __init__.py  analytics.py  audio_stream.py  cli.py  config.py  session.py  utils.py
voiceMonitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
